fix_20231124_适配JDK17用户操作提示_zangzang